styles.css
/* general styles */
* {
    background-color: black;
    color: white;    
}

body {
    overflow-x: hidden; /* prevent horizontal scrolling on all devices */
}


.container {
    display: flex;
    justify-content: center;
}

.intro-title {
    font-size: 50px;
    margin-right: 50px;
    margin-top: 30px;
}

.intro-title h1 {
    margin-bottom: 5px;
}

.intro-para {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    margin-top: 90px;
    font-size: 28px;
    max-width: 475px;
} 

.intro-title img {
    width: 440px;
    height: auto;
    max-width: 100%;
}

.contact-container {
    margin-top: 40px;
    display: flex;
    justify-content: flex-start;
    align-items: center;
    gap: 65px;
}

/* navigation styles */
nav {
    display: flex;
    align-items: center;
    justify-content: center; 
    width: 100%;
    flex-wrap: wrap;
    padding: 10px 20px; 
}

.navbar {
    display: flex;
    gap: 75px; 
    margin: 0 auto; 
    max-width: 800px; 
}

.logo {
    margin-right: 600px; 
}

.logo img {
    width: 60px; 
    height: auto;
    max-width: 100%;
    margin-left: 75px;
}

.navbar li {
    list-style-type: none;
}

.navbar a {
    text-decoration: none;
    color: white;
    font-size: 22px;
}


/* mobile styles */
@media (max-width: 768px) {
    .intro-title {
        font-size: 30px;
        margin-left: 20px; 
        margin-right: 20px; 
    }

    .intro-title h1 {
        margin-top:70px;
    }
    .intro-para {
        font-size: 16px;
        margin-left: 20px;
        margin-right: 20px; 
        margin-bottom: 20px;
    }

    .contact-container {
        gap: 15px;
    }

    nav {
        flex-direction: row; /* ensure nav items stay in a row */
        justify-content: space-between; /* distribute space between logo and links */
        width: 100%;
        overflow: hidden;
    }

    .navbar {
        display: flex;
        gap: 1px; 
        margin-left: 10px; 
        flex-wrap: nowrap; 
        flex-grow: 1; 
        justify-content: flex-start; /* align links next to the logo */
    }



    .navbar a {
        font-size: 12px;
        margin-right: 30px;
    }


    .logo {
        margin-right: auto; 
    }

    .logo img {
        height: auto;
        width: 45px;
        margin-left: 1px;
    }

    header .pages-title  {
        font-size: 30px;
        margin-top: 30px;
    }

   
 
}

.pages-title {
    font-size: 50px;
    margin-top: 75px;
}

header {
    display: flex;
    justify-content: center;
}

